# FletPython

./: README.md  envexample.txt  pyproject.toml
db_sql_folder/: db_main.py  db_manager.py  db_utils.py
flet_folder/: flet_main.py
